@@ -1,5 +1,8 @@
 2014-08-07  Jason Merrill  <jason@redhat.com>
 
+	PR c++/61959
+	* semantics.c (cxx_eval_bare_aggregate): Handle POINTER_PLUS_EXPR.
+
 	PR c++/58714
 	* tree.c (stabilize_expr): A stabilized prvalue is an xvalue.
 
